1.9.1.dev0
 * #928: Fix the user runtime directory location on macOS (and possibly Cygwin).

1.9.0
 * #609: Fix the glob expansion of "source_directories" values to respect the "working_directory"
   option.
 * #609: BREAKING: Apply the "working_directory" option to all actions, not just "create". This
   includes repository paths, destination paths, mount points, etc.
 * #562: Deprecate the "borgmatic_source_directory" option in favor of "user_runtime_directory"
   and "user_state_directory".
 * #562: BREAKING: Move the default borgmatic streaming database dump and bootstrap metadata
   directory from ~/.borgmatic to /run/user/$UID/borgmatic, which is more XDG-compliant. You can
   override this location with the new "user_runtime_directory" option. Existing archives with
   database dumps at the old location are still restorable. 
 * #562, #638: Move the default check state directory from ~/.borgmatic to 
   ~/.local/state/borgmatic. This is more XDG-compliant and also prevents these state files from
   getting backed up (unless you explicitly include them). You can override this location with the
   new "user_state_directory" option. After the first time you run the "check" action with borgmatic
   1.9.0, you can safely delete the ~/.borgmatic directory.
 * #838: BREAKING: With Borg 1.4+, store database dumps and bootstrap metadata in a "/borgmatic"
   directory within a backup archive, so the path doesn't depend on the current user. This means
   that you can now backup as one user and restore or bootstrap as another user, among other use
   cases.
 * #902: Add loading of encrypted systemd credentials. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/#using-systemd-service-credentials
 * #911: Add a "key change-passphrase" action to change the passphrase protecting a repository key.
 * #914: Fix a confusing apparent hang when when the repository location changes, and instead