@@ -75,10 +75,10 @@ def test_strip_path_prefix_from_extracted_dump_destination_renames_first_matchin
         ]
     )
 
-    flexmock(module.os).should_receive('rename').with_args(
+    flexmock(module.shutil).should_receive('move').with_args(
         '/foo/bar/postgresql_databases', '/run/user/0/borgmatic/postgresql_databases'
     ).once()
-    flexmock(module.os).should_receive('rename').with_args(
+    flexmock(module.shutil).should_receive('move').with_args(
         '/foo/bar/mariadb_databases', '/run/user/0/borgmatic/mariadb_databases'
     ).never()
 
