@@ -1,5 +1,7 @@
 1.9.1.dev0
  * #928: Fix the user runtime directory location on macOS (and possibly Cygwin).
+ * #931: Fix an error when implicitly upgrading the check state directory from ~/.borgmatic to
+   ~/.local/state/borgmatic across filesystems.
 
 1.9.0
  * #609: Fix the glob expansion of "source_directories" values to respect the "working_directory"
